# calcOS

./: CMakeLists.txt  LICENSE  README.md
scripts/: format.sh
src/: main.c  tft.c  tft.h
